Add a logic to handle if the user played before the robot arm stops. Has not checked with the robot though

--- a/algo.ipynb
+++ b/algo.ipynb
@@ -1064,6 +1064,29 @@
     "    for row in board_1_based:\n",
     "        print(\" | \".join(row))\n",
     "    print(\"\")\n",
+    "\n",
+    "def wasUserMovedBeforeHome(currPlayBoard):\n",
+    "    count = 0\n",
+    "    ret, frame = cap.read()\n",
+    "    prev_board = readBoard(frame)\n",
+    "    while(True):\n",
+    "        time.sleep(0.1)\n",
+    "        ret, frame = cap.read()\n",
+    "        curr = readBoard(frame)\n",
+    "        if (prev_board == curr).all():\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            count = 0\n",
+    "        prev_board = curr\n",
+    "\n",
+    "        if count >= 5:\n",
+    "            break;\n",
+    "\n",
+    "    if (currPlayBoard == curr).all():\n",
+    "        ## No Move\n",
+    "        return False, curr\n",
+    "    else:\n",
+    "        return True, curr\n",
     "    \n",
     "def waitforBoardChange():\n",
     "    ret, frame = cap.read()\n",
@@ -1072,7 +1095,6 @@
     "    while(True):\n",
     "        ret, frame = cap.read()\n",
     "        curr = readBoard(frame)\n",
-    "        last_board = curr\n",
     "        if (prev_board == curr).all():\n",
     "            time.sleep(1)\n",
     "            continue\n",
@@ -1084,7 +1106,8 @@
     "            time.sleep(0.2)\n",
     "            if count >= 10:\n",
     "                return curr, prev_board\n",
-    "\n",
+    "        last_board = curr\n",
+    "        \n",
     "def userMove(prev_board, curr_board):\n",
     "    for x in range(3):\n",
     "        for y in range(3):\n",
@@ -1231,8 +1254,13 @@
     "    user_move_count = 0\n",
     "    while True:\n",
     "        # Player's move\n",
-    "        curr_board, prev_board = waitforBoardChange()\n",
-    "        row, col = userMove(prev_board, curr_board)\n",
+    "        didUserPlayBeforeHome, currBoard = wasUserMovedBeforeHome(board)\n",
+    "\n",
+    "        if didUserPlayBeforeHome == False:\n",
+    "            curr_board, prev_board = waitforBoardChange()\n",
+    "            row, col = userMove(prev_board, curr_board)\n",
+    "        else:\n",
+    "            row, col = userMove(board, curr_board)\n",
     "        \n",
     "        if board[row][col] != ' ':\n",
     "            print(\"Invalid move! Try again.\")\n",
